# adamantine-ai-gateway

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
ai_gateway/: __init__.py  canonical.py  determinism.py  errors.py  gateway.py  handoff.py  hashing.py  policy.py  reason_ids.py  receipt.py  registry.py  types.py  validation.py
ai_gateway/adapters/: __init__.py  base.py  poi.py  (+1 more)
contracts/: ADAPTER_CONTRACT.md  ADAPTER_MANIFEST_V1.md  AI_GATEWAY_ENVELOPE_V1.md  AI_GATEWAY_HANDOFF_V1.md  AI_GATEWAY_OUTPUT_V1.md  AI_GATEWAY_RECEIPT_V1.md  DETERMINISM_RULES.md  POLICYPACK_V1.md
docs/: adamantine_ai_gateway_v1_0_0_INVARIANTS_LOCK.md
tests/: test_adapter_base.py  test_adapter_poi.py  test_adapter_poi_determinism.py  test_adapter_wallet.py  test_artifact_chain_invariants.py  test_builtin_adapter_manifest_runtime_lock.py  test_canonical.py  test_contract_envelope_v1.py  test_contract_output_v1.py  test_determinism.py  test_fail_closed.py  test_fallback_determinism_lock.py  test_gateway_determinism.py  test_gateway_governed.py  test_gateway_manifest_runtime_edges.py  test_gateway_reason_mapping.py  test_gateway_receipt.py  test_governed_manifest_enforcement.py  test_handoff_v1.py  test_integration_adamantine.py  test_manifest_failure_reason_ids_lock.py  test_manifest_v1.py  test_policy.py  test_policy_enforcement.py  test_policypack_v1.py  test_public_api_lock.py  test_reason_id_lock.py  test_receipt_builder.py  test_receipt_manifest_enforcement.py  test_receipt_v1.py  test_registry.py  test_release_truth_lock.py  test_validation.py
(+11 files in other folders)
