[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adamantine-ai-gateway"
version = "1.0.0"
description = "Fail-closed contract-first gateway for untrusted AI-originated work"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "DarekDGB" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["ai_gateway"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 100

[tool.setuptools.packages.find]
include = ["ai_gateway*"]
